# preliminary-sizing

./: CMakeLists.txt  README.md  resources.qrc
docs/uml/: preliminary_sizing_uml.puml
include/sizing/: AircraftClass.h  Mission.h  MissionSegment.h  PropulsionType.h  WeightEstimator.h
include/sizing/gui/: MainWindow.h
include/sizing/segments/: ClimbSegment.h  CruiseRangeSegment.h  DescentSegment.h  JetCruiseRangeSegment.h  JetReserveCruiseSegment.h  LandingSegment.h  MissionSegment.h  PropellerCruiseRangeSegment.h  PropellerReserveCruiseSegment.h  ReserveCruiseSegment.h  TaxiTakeoffSegment.h
src/: AircraftClass.cpp  Mission.cpp  WeightEstimator.cpp  main.cpp
src/gui/: MainWindow.cpp
src/segments/: ClimbSegment.cpp  CruiseRangeSegment.cpp  DescentSegment.cpp  JetCruiseRangeSegment.cpp  JetReserveCruiseSegment.cpp  LandingSegment.cpp  PropellerCruiseRangeSegment.cpp  PropellerReserveCruiseSegment.cpp  ReserveCruiseSegment.cpp  TaxiTakeoffSegment.cpp
